# datapack

./: .gitignore  ChangeLog  LICENSE  Makefile  Makefile.am  README.md  configure.ac  data3.txt  datafiles  datapack.h  datapack.pc.in  deb-control.in  main.c  offsets.h  pack.c  pak.h  unpack.c
sample/: .gitignore  Makefile.am  README.md  larger.txt  method1.c  method2.c  method3.c
tests/: data1.dpl  data2.dpl  test.cpp
